--- a/package.json
+++ b/package.json
@@ -31,16 +31,17 @@
   },
   "homepage": "https://github.com/MygengBin/bin-enter-the-drop-down-box#readme",
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/plugin-transform-runtime": "^7.14.5",
-    "@babel/preset-env": "^7.14.7",
-    "@babel/runtime": "^7.14.6",
-    "babel-loader": "^8.2.2",
+    "@babel/core": "^7.20.2",
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/runtime": "^7.20.1",
+    "babel-loader": "^9.1.0",
     "babel-polyfill": "^6.26.0",
-    "html-webpack-plugin": "^5.3.2",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^5.44.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "clean-webpack-plugin": "^4.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "terser-webpack-plugin": "^5.3.6",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0",
+    "webpack-dev-server": "^4.11.1"
   }
 }
